clusters/k3s-home/apps/longhorn/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-oauth2-proxy
  namespace: longhorn-system
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: longhorn-oauth2-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: longhorn-oauth2-proxy
  ports:
    - name: http
      port: 80
      targetPort: 4180
      protocol: TCP
